# bitaiir

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SECURITY.md  bitaiir.toml.example  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/bitaiir-chain/: Cargo.toml
crates/bitaiir-chain/examples/: bench_block_pow.rs  bench_tx_pow.rs
crates/bitaiir-chain/src/: chain.rs  consensus.rs  error.rs  genesis.rs  lib.rs  mempool.rs  mining.rs  pow.rs  subsidy.rs  target.rs  test_util.rs  tx_pow.rs  utxo.rs  validation.rs
crates/bitaiir-cli/: Cargo.toml
crates/bitaiir-cli/src/: main.rs
crates/bitaiir-crypto/: Cargo.toml
crates/bitaiir-crypto/examples/: wallet_info.rs
crates/bitaiir-crypto/src/: address.rs  base58.rs  error.rs  hash.rs  hd.rs  hmac.rs  key.rs  lib.rs  signature.rs  wif.rs
crates/bitaiir-crypto/tests/: vectors.rs
crates/bitaiir-daemon/: Cargo.toml
crates/bitaiir-daemon/examples/: ratelimit_flood.rs
crates/bitaiir-daemon/src/: config.rs  log.rs  main.rs  metrics.rs  peer_manager.rs  rpc_auth.rs  tls.rs  tui.rs
crates/bitaiir-daemon/tests/: features.rs  multinode.rs
crates/bitaiir-daemon/tests/common/: mod.rs
crates/bitaiir-faucet/: Cargo.toml
crates/bitaiir-faucet/src/: main.rs
crates/bitaiir-faucet/tests/: drip.rs
crates/bitaiir-net/: Cargo.toml
crates/bitaiir-net/src/: compact.rs  error.rs  lib.rs  message.rs  peer.rs  protocol.rs
crates/bitaiir-node/: Cargo.toml
crates/bitaiir-node/src/: lib.rs
crates/bitaiir-rpc/: Cargo.toml
crates/bitaiir-rpc/src/: lib.rs  wallet_crypto.rs
crates/bitaiir-seeder/: Cargo.toml
crates/bitaiir-seeder/src/: crawler.rs  db.rs  dns.rs  main.rs
crates/bitaiir-storage/: Cargo.toml
crates/bitaiir-storage/src/: lib.rs
crates/bitaiir-types/: Cargo.toml
crates/bitaiir-types/src/: amount.rs  block.rs  encoding.rs  error.rs  hash.rs  lib.rs  merkle.rs  network.rs  transaction.rs
crates/bitaiir-types/tests/: basic.rs
docs/: benchmarks.md  faucet-operator-guide.md  protocol.md  seed-operator-guide.md  seeder-operator-guide.md
reference/python/: pyproject.toml
reference/python/src/bitaiir/: __init__.py
reference/python/src/bitaiir/core/address/: address.py
reference/python/src/bitaiir/core/base/: base58.py  base64.py
reference/python/src/bitaiir/core/crypto/: hmac256.py  ripemd160.py  secp256k1.py  sha256.py
reference/python/src/bitaiir/core/ecc/: elliptic_curve_cryptography.py
reference/python/src/bitaiir/core/signature/: signature.py
reference/python/src/bitaiir/core/wallet/: wallet.py
reference/python/src/bitaiir/tools/: add_copyright.py  generate_vectors.py  simulate_blockchain_supply.py
resources/assets/logos/: Logo_BitAiir.psd  Logo_BitAiir_Black.psd  Logo_BitAiir_X.psd
tests/vectors/: crypto.json
