# BitAiir Core — Cargo workspace root.
#
# This workspace contains every Rust crate that makes up the BitAiir reference
# node. Crates are deliberately small and focused so each one can be developed,
# tested, and reasoned about in isolation. Higher-level crates depend on lower
# level ones, never the other way around.
#
# Layered architecture (top depends on bottom):
#
#     bitaiir-daemon      bitaiir-cli         <- binaries
#           |
#     +-----+-----+-----+-----+
#     |     |     |     |     |
#   chain  net   rpc  storage                 <- subsystems
#     |     |     |     |
#     +--+--+--+--+--+--+
#        |     |     |
#      types crypto                           <- foundations
#
# Add a new crate by placing it under `crates/` and adding it to `members`
# below. Shared package metadata lives in `[workspace.package]` so individual
# crates can inherit with `version.workspace = true`, etc.

[workspace]
resolver = "3"
members = [
    "crates/bitaiir-crypto",
    "crates/bitaiir-types",
    "crates/bitaiir-storage",
    "crates/bitaiir-chain",
    "crates/bitaiir-net",
    "crates/bitaiir-rpc",
    "crates/bitaiir-daemon",
    "crates/bitaiir-cli",
    "crates/bitaiir-faucet",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["The BitAiir Developers"]
repository = "https://github.com/bitaiir/bitaiir"
homepage = "https://github.com/bitaiir/bitaiir"
readme = "README.md"

# Centralized dependency versions. Individual crates declare what they actually
# use with `dep-name.workspace = true`, but the version is pinned in one place
# here. This keeps versions aligned across the workspace and makes upgrades a
# single-line change.
[workspace.dependencies]
# --- Internal crates ---
bitaiir-crypto = { path = "crates/bitaiir-crypto", version = "0.1.0" }
bitaiir-types = { path = "crates/bitaiir-types", version = "0.1.0" }
bitaiir-storage = { path = "crates/bitaiir-storage", version = "0.1.0" }
bitaiir-chain = { path = "crates/bitaiir-chain", version = "0.1.0" }
bitaiir-net = { path = "crates/bitaiir-net", version = "0.1.0" }
bitaiir-rpc = { path = "crates/bitaiir-rpc", version = "0.1.0" }

# --- External crates ---
# Crypto primitives. `secp256k1` is the official binding to libsecp256k1, the
# same C library Bitcoin Core uses. The RustCrypto crates (sha2, ripemd, hmac)
# are pure-Rust, audited, and constant-time where it matters.
secp256k1 = { version = "0.30", features = ["recovery", "global-context"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
bs58 = "0.5"
base64 = "0.22"
rand = "0.8"

# Errors. `thiserror` is the standard for library error enums; `anyhow` is for
# binaries where we don't care about the exact error type.
thiserror = "2"
anyhow = "1"

# Test helpers used by integration tests across the workspace.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
hex = "0.4"

# AES-256-GCM authenticated encryption for wallet key protection.
aes-gcm = "0.10"

# Zero sensitive data (passwords, private keys) in memory on drop.
zeroize = { version = "1", features = ["derive"] }

# Argon2id memory-hard function, the core of the Proof of Aiir algorithm.
# Pure Rust (no C bindings), works on Windows out of the box.
argon2 = "0.5"

# Binary serialization, used as the canonical encoding for transaction and
# block hashes. `features = ["serde"]` enables the bincode::serde bridge so
# types that already `#[derive(Serialize, Deserialize)]` work without a
# second set of derives.
bincode = { version = "2", features = ["serde"] }

# Async runtime.
tokio = { version = "1", features = ["full"] }

# JSON-RPC server and client.
jsonrpsee = { version = "0.24", features = ["server", "http-client", "macros"] }

# Tower middleware layers — HTTP Basic auth on the RPC server.
# jsonrpsee 0.24 uses tower 0.4 internally, so we pin to match or
# the `ServiceBuilder` types won't unify with `set_http_middleware`.
tower = "0.4"
tower-http = { version = "0.5", features = ["auth"] }
http = "1"

# HTTP server framework — used by `bitaiir-faucet` to expose its
# `POST /drip` endpoint.  Axum 0.7 is on tower 0.4 / http 1, so it
# unifies with the rest of the stack.
axum = "0.7"

# CIDR/IP-network parsing for the `rpc.allow_ip` allowlist.
ipnet = "2"

# BIP39 mnemonic generation/validation (seed phrase).
bip39 = { version = "2", features = ["std"] }

# BIP32 hierarchical deterministic key derivation.
bip32 = "0.5"

# CLI argument parsing.
clap = { version = "4", features = ["derive"] }

# Terminal UI.
ratatui = "0.29"
crossterm = "0.28"

# Cross-platform system clipboard (copy-on-select for the TUI).
arboard = "3"

# Line editor for the interactive REPL (history, arrow keys, tab completion).
rustyline = "15"

# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pure-Rust embedded ACID key-value store for chain persistence.
redb = "2"

# Config file parsing.
toml = "0.8"

# SipHash-2-4 for compact-block short IDs (BIP 152 style).
siphasher = "1"

# Fixed-width big integers for cumulative chain work calculation.
# `U256` is the standard type in the crypto ecosystem; arithmetic
# over 256-bit values is what we need for Bitcoin-style "most work
# wins" fork choice.
primitive-types = { version = "0.12", default-features = false, features = ["std"] }

# Temporary files and directories — used by tests that spin up a
# real redb database in isolation.
tempfile = "3"

# TLS for the RPC server.  `rustls` is pure Rust (no OpenSSL), matches
# the version already pulled in by `jsonrpsee-http-client`, and works
# cleanly on Windows / macOS / Linux / RISC-V.  We pin the `ring`
# crypto provider (instead of the default `aws-lc-rs`) because `ring`
# compiles on RISC-V targets without a C toolchain.  `rcgen` is used
# to generate self-signed certs on first startup when no cert/key
# path is configured.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"

# Release profile: optimize hard, strip symbols, abort on panic for smaller
# binaries. We override this for benchmarks if/when we add them.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Dev profile: keep default (opt-level=0, debug=true) so iteration is fast.
[profile.dev]
opt-level = 0
debug = true
