[package]
name = "bitaiir-chain"
description = "Consensus rules, block and transaction validation, UTXO set, mempool, and proof-of-work for BitAiir."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# The subsidy schedule returns `Amount` values, and later phases will
# validate `Block` / `Transaction` from this type set.
bitaiir-types = { workspace = true }

# Errors exposed by chain/utxo/mempool operations.
thiserror = { workspace = true }
