[package]
name = "bitaiir-chain"
description = "Consensus rules, block and transaction validation, UTXO set, mempool, and proof-of-work for BitAiir."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Hashing used by the Proof-of-Aiir stub (double_sha256) and by the
# merkle-root recomputation in validate_block.
bitaiir-crypto = { workspace = true }

# The subsidy schedule returns `Amount` values, and the validation
# layer inspects `Block`, `Transaction`, and friends from this crate.
bitaiir-types = { workspace = true }

# Errors exposed by chain/utxo/mempool/validation operations.
thiserror = { workspace = true }
