[package]
name = "bitaiir-daemon"
description = "BitAiir Core daemon (`bitaiird`) — the long-running node process."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The package is `bitaiir-daemon` for clarity in the workspace, but the actual
# binary is named `bitaiird` to match Bitcoin Core conventions.
[[bin]]
name = "bitaiird"
path = "src/main.rs"

[dependencies]
arboard = { workspace = true }
base64 = { workspace = true }
bitaiir-chain = { workspace = true }
bitaiir-crypto = { workspace = true }
bitaiir-net = { workspace = true }
bitaiir-rpc = { workspace = true }
bitaiir-storage = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitaiir-types = { workspace = true }
jsonrpsee = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Integration tests spawn real `bitaiird` processes and drive them
# over JSON-RPC.  `tempfile` gives each node a clean data dir; the
# other crates are already in the workspace for the daemon itself,
# we just need them at test-time too.
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
