[package]
name = "bitaiir-net"
description = "Peer-to-peer networking for BitAiir: handshake, message framing, gossip, and block/transaction sync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitaiir-crypto = { workspace = true }
bitaiir-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
