[package]
name = "bitaiir-node"
description = "Top-level node library that wires together chain, storage, networking, and RPC into a runnable daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
