[package]
name = "bitaiir-rpc"
description = "JSON-RPC server and client types for the BitAiir node, modeled on bitcoind's RPC interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitaiir-chain = { workspace = true }
bitaiir-types = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
