[package]
name = "bitaiir-rpc"
description = "JSON-RPC server and client types for the BitAiir node, modeled on bitcoind's RPC interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { workspace = true }
bip39 = { workspace = true }
argon2 = { workspace = true }
bitaiir-chain = { workspace = true }
hex = { workspace = true }
bitaiir-crypto = { workspace = true }
bitaiir-net = { workspace = true }
bitaiir-storage = { workspace = true }
bitaiir-types = { workspace = true }
jsonrpsee = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
