[package]
name = "bitaiir-storage"
description = "Persistent storage for BitAiir: blocks, headers, UTXO set, and chain state, backed by redb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitaiir-chain = { workspace = true }
bitaiir-crypto = { workspace = true }
bitaiir-types = { workspace = true }
redb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
