[project]
name = "bitaiir-reference"
version = "0.1.0"
description = "BitAiir reference implementation in Python — executable spec and source of test vectors for the Rust implementation"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "The BitAiir Developers" },
]
keywords = ["bitaiir", "cryptocurrency", "blockchain", "p2p", "ecdsa"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = []

# Console entry points will be enabled once bitaiir.daemon and bitaiir.cli exist.
# [project.scripts]
# bitaiird = "bitaiir.daemon:main"
# bitaiir-cli = "bitaiir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitaiir"]

[tool.hatch.build.targets.sdist]
include = [
    "src/bitaiir",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
